[metadata]
name = Yappy3
version = 0.0.2
author = Álvaro Rodríguez Carpintero
author_email = alvaro9rocar@gmail.com
description = Biblioteca yappy convertida a python3. Yappy proporciona un analizador léxico y un generador parser LR para aplicaciones en python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Alvaro9rc/Yappy3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src